[package]
name = "common"
edition = "2021"
rust-version = "1.78"

[package.metadata.lambda.build.compiler]
type = "cross"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = "1.0"
lambda_runtime = "0.11.2"
once_cell = "1.19"
optarg2chain = "0.1.0"
scrypt = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.18.1"

[dependencies.aws_lambda_events]
version = "0.15.1"
default-features = false
features = ["apigw"]
